# testinstall

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakeLists4.txt  README.md  commands.sh  echo.py  ex19.F90  ex1f.F90  ex5f.F90  exl95.F90  lapackinstall.sh  out  out.txt  petsc_configure.py  see.txt  test.sh
errorlogs/: checkpetsc.txt
examples/: ex1.c  ex19f.F90  ex1f.F90  ex4f.F90  ex5f.F90
